# VertexLab

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  callbacks.cpp  callbacks.h  camera.cpp  camera.h  drawing_utils.cpp  drawing_utils.h  imgui_manager.cpp  imgui_manager.h  imgui_widgets.cpp  imgui_widgets.h  main.cpp  shader.cpp  shader.h  utils.cpp  utils.h
